--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,10 +40,11 @@ body {
   align-items: center;
   top: 0;
   left: 0;
+  gap: 50px;
 }
 
 .brandText {
-  font-size: 1.5rem;
+  font-size: 30px;
   font-weight: bold;
   color: #ffffff;
   display: flex;
@@ -54,7 +55,7 @@ body {
   background: none;
   border: none;
   color: #ffffff;
-  font-size: 1rem;
+  font-size: 20px;
   cursor: pointer;
   margin: 0 0.5rem;
 }
@@ -91,11 +92,11 @@ body {
 }
 
 .profileImage {
-  top: auto;
   border-radius: 50%;
   width: 300px;
   height: 300px;
   margin-bottom: 1rem;
+  margin-top: 20px;
 }
 
 .heading {
